@@ -19,33 +19,45 @@ BEGIN {
 sub _my_thingy {
 	my ($class, $wanted, $user) = @_;
 
+	# Find the user's config file
 	my $home = defined($user)
 		? $class->users_home($user)
 		: $class->my_home;
-	return if ! -d $home;
+	return unless -d $home;
 	my $conf = $home . '/.config/user-dirs.dirs';
-	return $class->_default_thingy($wanted, $user)
-		if ! -e $conf || ! -r _ || -d _;
+	unless ( -e $conf and -r _ and ! -d _ ) {
+		return $class->_default_thingy($wanted, $user);
+	}
 
-	# IO::File is safer if we're targeting 5.5.3 minimum.
-	require IO::File;
-	my $fh = IO::File->new;
-	if ( ! $fh->open( $conf, '<' ) ) {
+	# Slurp in the file.
+	# This involves reading a little more of the file than we might
+	# need, but keeps the handle open for less total time (I think)
+	# NOTE: Since the file path is not provided by the user,
+	# the two argument open is safe in this case.
+	local *FILE;
+	unless ( open(FILE, "<$conf") ) {
 		warn "Error opening $conf for reading: $!\n";
 		return;
 	}
+	my @buffer = <FILE>;
+	close FILE or die "Unable to close $conf: $!";
 
-	while ( defined( my $line = <$fh> ) ) {
-		chomp $line;
+	foreach my $line ( @buffer ) {
+		# A chomp that is more resistant to accidental newline
+		# problems caused by editing the file remotely from windows.
+		$line =~ s/[\015\012]+\z//g;
+
 		next if $line =~ m{^#};
 		my($name, $value) = split m{=}, $line, 2;
-		$name  =~ s{XDG_(.+?)_DIR}{$1};
+		$name  =~ s/XDG_(.+?)_DIR/$1/;
 		next if lc $name ne $wanted;
 		$value =~ tr/"//d;
-		$value =~ s{\$HOME}{$home}g;
+		$value =~ s/\$HOME/$home/g;
 		return $value;
 	}
-	$fh->close || die "Unable to close $conf: $!";
+
+	# Failed to find a value
+	return undef;
 }
 
 sub _default_thingy {
@@ -54,38 +66,50 @@ sub _default_thingy {
 	my $conf = '/etc/xdg/user-dirs.defaults';
 	return if ! -e $conf || ! -r _ || -d _;
 
-	# IO::File is safer if we're targeting 5.5.3 minimum.
-	require IO::File;
-	my $fh = IO::File->new;
-	if ( ! $fh->open( $conf, '<' ) ) {
+	# Slurp in the file.
+	# This involves reading a little more of the file than we might
+	# need, but keeps the handle open for less total time (I think)
+	# NOTE: Since the file path is not provided by the user,
+	# the two argument open is safe in this case.
+	local *FILE;
+	unless ( open(FILE, "<$conf") ) {
 		warn "Error opening $conf for reading: $!\n";
 		return;
 	}
+	my @buffer = <FILE>;
+	close FILE or die "Unable to close $conf: $!";
 
 	my $home = defined($user)
 		? $class->users_home($user)
 		: $class->my_home;
-	while ( defined( my $line = <$fh> ) ) {
-		chomp $line;
+	foreach my $line ( @buffer ) {
+		# A chomp that is more resistant to accidental newline
+		# problems caused by editing the file remotely from windows.
+		$line =~ s/[\015\012]+\z//g;
+
 		next if $line =~ m{^#};
 		my($name, $value) = split m{=}, $line, 2;
 		next if lc $name ne $wanted;
 		return File::Spec->catdir( $home, $value );
 	}
-	$fh->close || die "Unable to close $conf: $!";
+
+	return undef;
 }
 
-
-sub my_desktop   { shift->_my_thingy('desktop'); }
+sub my_desktop   { shift->_my_thingy('desktop');   }
 sub my_documents { shift->_my_thingy('documents'); }
-sub my_music     { shift->_my_thingy('music'); }
-sub my_pictures  { shift->_my_thingy('pictures'); }
-sub my_videos    { shift->_my_thingy('videos'); }
+sub my_music     { shift->_my_thingy('music');     }
+sub my_pictures  { shift->_my_thingy('pictures');  }
+sub my_videos    { shift->_my_thingy('videos');    }
 
 sub my_data {
 	$ENV{XDG_DATA_HOME}
-		|| File::Spec->catdir(shift->my_home, qw{ .local share });
+	||
+	File::Spec->catdir(shift->my_home, qw{ .local share });
 }
+
+
+
 
 
 #####################################################################
